tests/expectations/compiler/finalize/decrement_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [ETYC0372005]: Unknown function `decrement`
    --> compiler-test:11:9
     |
  11 |         decrement(amounts, addr, amount);
     |         ^^^^^^^^^
Warning [WPAR0370001]: The keyword `decrement` is deprecated.
    --> compiler-test:11:9
     |
  11 |         decrement(amounts, addr, amount);
     |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
     |
     = Use `Mapping::{get, get_or_use, set, remove, contains}` for manipulating on-chain mappings."""]
